fix word wrap on mobile

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -410,6 +410,7 @@ header {
       display: inline;
       padding: 0 0.3em 0 1em;
       font-size: 0.9em;
+      word-wrap: normal;
     }
   }
 
